src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_string_variadic_flags_each_non_string_argument.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: "&diagnostics"
---
error[E062]: Invalid type nature for generic argument. DINT is no ANY_STRING
   ┌─ <internal>:10:20
   │
10 │             CONCAT(x, y);
   │                    ^ Invalid type nature for generic argument. DINT is no ANY_STRING

error[E062]: Invalid type nature for generic argument. REAL is no ANY_STRING
   ┌─ <internal>:10:23
   │
10 │             CONCAT(x, y);
   │                       ^ Invalid type nature for generic argument. REAL is no ANY_STRING

error[E062]: Invalid type nature for generic argument. DINT is no ANY_STRING
   ┌─ <internal>:11:20
   │
11 │             CONCAT(x, y, z);
   │                    ^ Invalid type nature for generic argument. DINT is no ANY_STRING

error[E062]: Invalid type nature for generic argument. REAL is no ANY_STRING
   ┌─ <internal>:11:23
   │
11 │             CONCAT(x, y, z);
   │                       ^ Invalid type nature for generic argument. REAL is no ANY_STRING

error[E062]: Invalid type nature for generic argument. DINT is no ANY_STRING
   ┌─ <internal>:12:20
   │
12 │             CONCAT(x, z);
   │                    ^ Invalid type nature for generic argument. DINT is no ANY_STRING

error[E062]: Invalid type nature for generic argument. DINT is no ANY_STRING
   ┌─ <internal>:13:20
   │
13 │             CONCAT(1, 'hello');
   │                    ^ Invalid type nature for generic argument. DINT is no ANY_STRING

error[E064]: Could not resolve generic type T with ANY_STRING
   ┌─ <internal>:10:13
   │
10 │             CONCAT(x, y);
   │             ^^^^^^^^^^^^ Could not resolve generic type T with ANY_STRING

error[E064]: Could not resolve generic type T with ANY_STRING
   ┌─ <internal>:11:13
   │
11 │             CONCAT(x, y, z);
   │             ^^^^^^^^^^^^^^^ Could not resolve generic type T with ANY_STRING

error[E064]: Could not resolve generic type T with ANY_STRING
   ┌─ <internal>:12:13
   │
12 │             CONCAT(x, z);
   │             ^^^^^^^^^^^^ Could not resolve generic type T with ANY_STRING

error[E064]: Could not resolve generic type T with ANY_STRING
   ┌─ <internal>:13:13
   │
13 │             CONCAT(1, 'hello');
   │             ^^^^^^^^^^^^^^^^^^ Could not resolve generic type T with ANY_STRING
